# certified_knowledge_graph_rag

./: .gitignore  AGENTS.md  CLAUDE.md  DECISIONS.md  PROGRESS.md  README.md  pyproject.toml  threat_model.md
configs/: example.yaml
context/: BLOCKED.md  SOURCES.md  manifest.yaml
results/: certificate_distribution.md  certified_vs_empirical.md  data_stats.md  insertion_certificate.md  retriever_ablation.md  selective_prediction.md  stage1_gate.md  text_kg_certificate.md
results/FINAL/: RESULTS.md
scripts/: build_2wiki_kg.py  check_prereqs.py  compute_certificates.py  compute_insertion_certificates.py  compute_text_kg_certificates.py  make_certificate_report.py  make_curve_report.py  make_data_stats.py  make_figures.py  make_multiseed_report.py  make_retriever_report.py  make_selective_report.py  make_stage1_report.py  run_p7_gate.py  run_p7_gate_2wiki.py  run_retriever_ablation.py  run_selective_prediction.py  smoke_reasoner.py
slurm/: certify_2wiki.sbatch  certify_metaqa.sbatch
src/mcgr/: __init__.py  cli.py  config.py  logging_utils.py  prereqs.py  seeding.py
src/mcgr/attacks/: rag_safety.py
src/mcgr/certify/: __init__.py  insertion.py  menger.py  pipeline.py
src/mcgr/data/: __init__.py  cwq.py  hotpotqa.py  metaqa.py  musique.py  schema.py  twowiki.py  webqsp.py
src/mcgr/eval/: selective.py
src/mcgr/kg/: graph_store.py  metaqa_kg.py  text_kg.py  twowiki_kg.py  wikidata.py
src/mcgr/models/: reasoner.py
src/mcgr/retrieval/: agentic.py  evidence.py
tests/: test_agentic.py  test_attacks.py  test_certify_menger.py  test_certify_pipeline.py  test_certify_query.py  test_data_loaders.py  test_evidence.py  test_insertion.py  test_p0_plumbing.py  test_prereqs.py  test_selective.py  test_text_kg.py  test_wikidata.py
