[project]
name = "mcgr"
version = "0.1.0"
description = "Menger-Certified Graph-RAG: provable per-answer robustness for multi-hop knowledge-graph reasoning via path redundancy"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "networkx>=3.4",
    "pyyaml>=6.0.3",
]

[project.scripts]
mcgr-demo = "mcgr.cli:main"

[dependency-groups]
dev = [
    "ruff>=0.14",
    "pytest>=8",
]

[build-system]
requires = ["uv_build>=0.11,<0.12"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py312"
# Baseline repos land in third_party/ per AGENTS.md §3.6 — never lint them.
extend-exclude = ["third_party"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]

[tool.pytest.ini_options]
testpaths = ["tests"]
# prereqs checks depend on $SCRATCH state and external services; run them
# explicitly with `pytest -m prereqs` (see tests/test_prereqs.py).
addopts = "-m 'not prereqs'"
markers = [
    "prereqs: full AGENTS.md §3 prerequisite verification (deselected by default)",
]
