[project]
name = "mcgr"
version = "0.1.0"
description = "Menger-Certified Graph-RAG: provable per-answer robustness for multi-hop knowledge-graph reasoning via path redundancy"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.9",
    "networkx>=3.4",
    "pyarrow>=24.0.0",
    "pyyaml>=6.0.3",
]

[project.optional-dependencies]
# LLM inference (P6+): heavy CUDA stack, kept out of the base env so the
# CPU-only certificate work installs fast. Install with: uv sync --extra llm
llm = [
    "torch>=2.6",
    "transformers>=4.48",
    "accelerate>=1.2",
]

[project.scripts]
mcgr-demo = "mcgr.cli:main"

[dependency-groups]
dev = [
    "ruff>=0.14",
    "pytest>=8",
]

# GH200 is aarch64 + CUDA (Hopper sm_90). Default-PyPI torch now ships CUDA
# aarch64 (sbsa) wheels; pin the resolver to that target so it picks them.
[tool.uv]
required-environments = ["sys_platform == 'linux' and platform_machine == 'aarch64'"]

[build-system]
requires = ["uv_build>=0.11,<0.12"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py312"
# Baseline repos land in third_party/ per AGENTS.md §3.6 — never lint them.
extend-exclude = ["third_party"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]

[tool.pytest.ini_options]
testpaths = ["tests"]
# prereqs/data tests depend on $SCRATCH state and external services; run
# them explicitly (e.g. `pytest -m data`). Default run is hermetic.
addopts = "-m 'not prereqs and not data'"
markers = [
    "prereqs: full AGENTS.md §3 prerequisite verification (deselected by default)",
    "data: loader tests that read datasets from $SCRATCH (deselected by default)",
]
